# solana-core-programs

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: .env  file-filters.yml
.github/workflows/: build-rust-client.yml
clients/js/: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
clients/js/src/: plugin.ts
clients/js/test/: _setup.ts  getProgram.test.ts  initializeNonceAccount.test.ts  transferSol.test.ts
clients/rust/: CONTRIBUTING.md  Cargo.toml  README.md
configs/: kinobi.cjs  validator.cjs
idls/: spl_system.json
programs/address-lookup-table/: Cargo.toml
programs/address-lookup-table/src/: entrypoint.rs  error.rs  lib.rs  processor.rs
programs/address-lookup-table/tests/: close_lookup_table_ix.rs  common.rs  create_lookup_table_ix.rs  deactivate_lookup_table_ix.rs  extend_lookup_table_ix.rs  freeze_lookup_table_ix.rs
spl-address-lookup-table/: idl.json  kinobi.cjs  package.json
spl-address-lookup-table/clients/js/: README.md  package.json
spl-address-lookup-table/clients/rust/: Cargo.toml  README.md
spl-compute-budget/: idl.json  package.json
spl-compute-budget/clients/js/: .eslintrc.js  README.md  build.cjs  package.json
spl-compute-budget/clients/rust/: Cargo.toml  README.md
spl-memo/: kinobi.cjs  package.json
spl-memo/clients/js/: README.md  package.json
spl-memo/clients/rust/: Cargo.toml  README.md
spl-system/: kinobi.cjs  package.json
spl-system/clients/js/: .eslintrc.js  README.md  package.json  pnpm-lock.yaml  tsconfig.declarations.json  tsconfig.json  (+1 more)
(+12 files in other folders)
