[package]
name = "solana-address-lookup-table-program"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
bincode = "1.3.3"
bytemuck = "1.14.0"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
solana-frozen-abi = "1.17.7"
solana-frozen-abi-macro = "1.17.7"
solana-program = "1.17.7"
spl-pod = "0.1.0"
spl-program-error = "0.3.0"

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "1.17.7"
solana-sdk = "1.17.7"
